# mixseek-plus

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/skills/docs-sync/: SKILL.md
.agents/skills/implementation-verify/: SKILL.md
.agents/skills/planning-validate/: SKILL.md
.agents/skills/progress-report/: SKILL.md
.agents/skills/release-check/: SKILL.md
.claude/: workflow-config.json
.claude/commands/: add-worktree.md  merge-pr.md  refactor-scan.md  review-pr-comments.md  start-issue.md
.claude/skills/code-quality-gate/: SKILL.md
.claude/skills/detect-python-command/: SKILL.md
.claude/skills/doc-updater/: SKILL.md
.claude/skills/issue-reporter/: SKILL.md
.claude/skills/mixseek-config-validate/: SKILL.md
.claude/skills/mixseek-model-list/: SKILL.md
.claude/skills/mixseek-prompt-builder/: SKILL.md
.claude/skills/mixseek-skills/: SKILL.md
.claude/skills/mixseek-team-config/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md
.github/workflows/: claude-review.yml
.skills/: README.md
.skills/mixseek-debug/: SKILL.md
.skills/mixseek-debug/scripts/: check-debug-env.sh
.skills/mixseek-evaluator-config/: SKILL.md
.skills/mixseek-evaluator-config/references/: METRICS.md
.skills/mixseek-model-list/: SKILL.md
.skills/mixseek-prompt-builder/: SKILL.md
.skills/mixseek-workspace-init/: SKILL.md
.specify/memory/: constitution.md
docs/: api-reference.md  conf.py  getting-started.md  index.md  user-guide.md
scripts/: README.md  _lib.sh  add-worktree.sh  complete-issue.sh  full-workflow.sh  merge-pr.sh  respond-comments.sh  review-pr.sh  setup-issue.sh
skills/: README.md  SKILL.md
skills/mixseek-debug/: SKILL.md
skills/mixseek-orchestrator-config/: SKILL.md
specs/001-core-inheritance/: spec.md
specs/003-groq-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-claudecode-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/031-playwright-markdown-fetch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/033-claudecode-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/039-tavily-search-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mixseek_plus/: __init__.py  cli.py  core_patch.py  errors.py  model_factory.py  presets.py  types.py
src/mixseek_plus/agents/: __init__.py  (+9 more)
tests/: __init__.py  conftest.py
tests/integration/: test_claudecode_agent_execution.py  test_claudecode_api.py  test_cli_claudecode.py  test_cli_groq.py  test_groq_agent_execution.py  test_groq_api.py  test_tavily_search_integration.py
tests/unit/: test_agent_factory_registration.py  test_api_error_details.py  test_base_claudecode_agent.py  test_base_claudecode_agent_logging.py  test_base_playwright_agent.py  test_claudecode_logging.py  test_claudecode_plain_agent.py  test_claudecode_provider.py  test_claudecode_tavily_search_agent.py  test_claudecode_toolset_mixin.py  test_cli.py  test_core_patch_logging.py  test_execution_mixin.py  test_groq_plain_agent.py  test_groq_provider.py  test_groq_tavily_search_agent.py  test_groq_web_search_agent.py  test_leader_member_tool_warning.py  test_logfire_integration.py  test_member_agent_config_validator.py  test_model_factory.py  test_patch_core.py  test_playwright_agent_logging.py  test_playwright_errors.py  test_playwright_markdown_fetch_agent.py  test_presets.py  test_tavily_client.py  test_tavily_tools_mixin.py  test_unpatched_detection.py  test_verbose_helpers.py
(+42 files in other folders)
