[project]
name = "mixseek-plus"
version = "0.0.7"
description = "Add your description here"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.13.7"
dependencies = [
    "claude-agent-sdk",
    "claudecode-model",
    "mixseek-core",
    "pydantic-ai",
    "tavily-python>=0.7.4",
]

[project.scripts]
mixseek-plus = "mixseek_plus.cli:main"
mskp = "mixseek_plus.cli:main"

[project.optional-dependencies]
# Observability with Logfire (optional for development/debugging)
logfire = [
    "logfire>=4.15.1",
]
# Playwright + MarkItDown for web fetching with Markdown conversion
playwright = [
    "playwright>=1.50.0",
    "markitdown>=0.1.4",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.13",
    "skills-ref>=0.1.0",
]
docs = [
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-mermaid>=2.0.0",
]

[tool.uv.sources]
claudecode-model = { git = "https://github.com/drillan/claudecode-model.git" }

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "markitdown.*",
]
ignore_missing_imports = true
